Fetches NBA players

--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Then just do this to import them:
 # import { API_URL } from 'react-native-dotenv'
 
-API_URL=https://myapi.com
+API_URL=https://raw.githubusercontent.com/alexnoob/BasketBall-GM-Rosters/master/2018-19.NBA.Roster.json
 GOOGLE_MAPS_API_KEY=abcdefgh
