--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "mobx-state-tree": "^3.12.2",
     "ramda": "0.25.0",
     "react": "16.8.3",
-    "react-native": "0.59.3",
-    "react-native-gesture-handler": "1.1.0",
-    "react-native-keychain": "3.0.0",
+    "react-native": "0.59.8",
+    "react-native-gesture-handler": "1.3.0",
+    "react-native-keychain": "3.1.3",
     "react-native-localize": "^1.0.0",
-    "react-native-splash-screen": "3.1.1",
+    "react-native-splash-screen": "3.2.0",
     "react-navigation": "3.11.0",
     "reactotron-mst": "^3.1.1",
-    "reactotron-react-native": "^3.4.1",
+    "reactotron-react-native": "3.6.0",
     "validate.js": "0.12.0"
   },
   "devDependencies": {
@@ -50,14 +50,14 @@
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-optional-catch-binding": "^7.0.0",
     "@babel/runtime": "^7.0.0",
-    "@storybook/addon-storyshots": "^4.0.6",
-    "@storybook/react-native": "3.4.3",
-    "@types/jest": "23.3.2",
-    "@types/ramda": "0.25.28",
-    "@types/react": "16.7.7",
-    "@types/react-native": "0.57.13",
-    "@types/react-navigation": "2.13.5",
-    "@types/react-test-renderer": "16.0.3",
+    "@storybook/addon-storyshots": "^5.0.11",
+    "@storybook/react-native": "4.1.18",
+    "@types/jest": "24.0.13",
+    "@types/ramda": "0.26.9",
+    "@types/react": "16.8.19",
+    "@types/react-native": "0.57.60",
+    "@types/react-navigation": "3.0.7",
+    "@types/react-test-renderer": "16.8.1",
     "@typescript-eslint/eslint-plugin": "^1.1.0",
     "@typescript-eslint/parser": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
@@ -87,7 +87,7 @@
     "react-test-renderer": "16.8.3",
     "rimraf": "2.6.2",
     "solidarity": "2.1.0",
-    "typescript": "3.2.4"
+    "typescript": "3.5.1"
   },
   "jest": {
     "preset": "jest-preset-ignite",
