--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "sourceMap": true,
-    "target": "es2015"
+    "target": "es2015",
+    "lib": ["es6"]
   },
   "exclude": ["node_modules"],
   "include": ["app", "test", "storybook"]
