--- a/package.json
+++ b/package.json
@@ -50,8 +50,9 @@
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-optional-catch-binding": "^7.0.0",
     "@babel/runtime": "^7.0.0",
-    "@storybook/addon-storyshots": "^5.0.11",
-    "@storybook/react-native": "4.1.18",
+    "@storybook/addon-storyshots": "^5.1.1",
+    "@storybook/react-native": "5.1.1",
+    "@storybook/theming": "^5.1.1",
     "@types/jest": "24.0.13",
     "@types/ramda": "0.26.9",
     "@types/react": "16.8.19",
