--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-gesture-handler": "1.3.0",
     "react-native-keychain": "3.1.3",
     "react-native-localize": "^1.0.0",
+    "react-native-reanimated": "^1.0.1",
     "react-native-splash-screen": "3.2.0",
     "react-navigation": "3.11.0",
     "reactotron-mst": "^3.1.2",
