--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "react-native start",
     "test": "jest",
     "test:e2e": "detox test -c ios.sim.debug",
     "build:e2e": "detox build -c ios.sim.debug",
@@ -34,8 +34,8 @@
     "mobx-react": "^5.4.3",
     "mobx-state-tree": "^3.12.2",
     "ramda": "0.25.0",
-    "react": "16.8.3",
-    "react-native": "0.59.8",
+    "react": "16.8.6",
+    "react-native": "0.60.0",
     "react-native-gesture-handler": "1.3.0",
     "react-native-keychain": "3.1.3",
     "react-native-localize": "^1.0.0",
@@ -47,10 +47,10 @@
     "validate.js": "0.12.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-0",
+    "@babel/core": "^7.4.5",
+    "@babel/runtime": "^7.4.5",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-optional-catch-binding": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
     "@storybook/addon-storyshots": "^5.1.1",
     "@storybook/react-native": "5.1.1",
     "@storybook/theming": "^5.1.1",
@@ -86,7 +86,7 @@
     "react-dom": "16.5.0",
     "react-native-dotenv": "^0.2.0",
     "react-powerplug": "0.1.5",
-    "react-test-renderer": "16.8.3",
+    "react-test-renderer": "16.8.6",
     "rimraf": "2.6.2",
     "solidarity": "2.1.0",
     "typescript": "3.5.1"
@@ -176,11 +176,6 @@
       "@typescript-eslint/no-empty-interface": 0,
       "@typescript-eslint/no-var-requires": 0
     }
-  },
-  "rnpm": {
-    "assets": [
-      "./app/theme/fonts/"
-    ]
   },
   "babel": {
     "presets": [
