--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "storybook": "storybook start -p 9001 --skip-packager"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.3.4",
-    "apisauce": "0.16.0",
+    "@react-native-community/async-storage": "^1.6.1",
+    "apisauce": "1.0.3",
     "i18n-js": "^3.0.11",
     "lodash.throttle": "4.1.1",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.1",
     "mobx-state-tree": "^3.14.1",
-    "ramda": "0.25.0",
+    "ramda": "0.26.1",
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-gesture-handler": "1.3.0",
@@ -43,53 +43,53 @@
     "react-native-splash-screen": "3.2.0",
     "react-navigation": "3.11.1",
     "reactotron-mst": "^3.1.2",
-    "reactotron-react-native": "3.6.0",
-    "validate.js": "0.12.0"
+    "reactotron-react-native": "4.0.0-beta.1",
+    "validate.js": "0.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
+    "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-optional-catch-binding": "^7.0.0",
-    "@babel/runtime": "^7.4.5",
+    "@babel/runtime": "^7.5.5",
     "@storybook/addon-storyshots": "^5.1.1",
-    "@storybook/react-native": "5.1.1",
+    "@storybook/react-native": "5.1.9",
     "@storybook/theming": "^5.1.1",
-    "@types/jest": "24.0.13",
-    "@types/ramda": "0.26.9",
-    "@types/react": "16.8.19",
-    "@types/react-native": "0.57.60",
+    "@types/jest": "24.0.15",
+    "@types/ramda": "0.26.18",
+    "@types/react": "16.8.23",
+    "@types/react-native": "0.60.2",
     "@types/react-navigation": "3.0.7",
-    "@types/react-test-renderer": "16.8.1",
-    "@typescript-eslint/eslint-plugin": "^1.1.0",
-    "@typescript-eslint/parser": "^1.1.0",
+    "@types/react-test-renderer": "16.8.3",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
-    "detox": "^12.4.0",
-    "eslint": "^5.12.1",
-    "eslint-config-prettier": "^3.6.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.15.0",
-    "eslint-plugin-node": "^8.0.1",
+    "detox": "^13.3.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-native": "^3.6.0",
     "eslint-plugin-standard": "^4.0.0",
-    "ignite-bowser": "file:/Users/jh/Code/ReactNative/ignite-bowser",
+    "ignite-bowser": "file:../ignite-bowser",
     "jest": "^24.8.0",
     "jest-preset-ignite": "0.6.1",
-    "metro-react-native-babel-preset": "^0.54.1",
+    "metro-react-native-babel-preset": "^0.55.0",
     "npm-run-all": "4.1.5",
-    "patch-package": "5.1.1",
+    "patch-package": "6.1.2",
     "postinstall-prepare": "1.0.1",
-    "prettier": "1.12.1",
-    "react-devtools-core": "3.4.3",
-    "react-dom": "16.5.0",
+    "prettier": "1.18.2",
+    "react-devtools-core": "3.6.2",
+    "react-dom": "16.8.6",
     "react-native-dotenv": "^0.2.0",
-    "react-powerplug": "0.1.5",
+    "react-powerplug": "1.0.0",
     "react-test-renderer": "16.8.6",
-    "rimraf": "2.6.2",
-    "solidarity": "2.1.0",
-    "typescript": "3.5.1"
+    "rimraf": "2.6.3",
+    "solidarity": "2.3.1",
+    "typescript": "3.5.3"
   },
   "jest": {
     "preset": "jest-preset-ignite",
