Fighting native modules

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "storybook": "storybook start -p 9001 --skip-packager"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
     "apisauce": "1.0.3",
     "i18n-js": "^3.0.11",
     "lodash.throttle": "4.1.1",
